--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -12,7 +12,7 @@ jobs:
    - name: install-python
      uses: actions/setup-python@v4
      with:
-      python-version: 3.1x
+      python-version: 3.11.0-rc.1
       
    - name: print-line
      run: echo 'welcome to python'
