--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -7,6 +7,8 @@ jobs:
   runs-on: ubuntu-latest
   
   steps:
+   - uses: actions/action@v1
+   
    - uses: actions/checkout@v3
      
    - name: install-python
