--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -9,7 +9,7 @@ jobs:
   steps:  
    - uses: actions/checkout@v3
    
-   - uses: ./actions/action@v1
+   - uses: actions/action@v1
    
    - name: install-python
      uses: actions/setup-python@v4
