--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -13,7 +13,7 @@ jobs:
      uses: actions/action@v1
    
    - name: install-python
-     uses: actions/setup-python@v4
+     uses: ./actions/setup-python@v4
      with:
       python-version: 3.11.0-rc.1
       
