--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -10,10 +10,10 @@ jobs:
    - uses: actions/checkout@v3
    
    - id: hello-world-action
-     uses: actions/action@v1
+     uses: ./actions/action@v1
    
    - name: install-python
-     uses: ./actions/setup-python@v4
+     uses: actions/setup-python@v4
      with:
       python-version: 3.11.0-rc.1
       
