--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -9,6 +9,11 @@ jobs:
   steps:  
    - uses: actions/checkout@v3
    
+   - name: Check current directory and contents
+     run: |
+         pwd 
+         ls -la
+   
    - id: hello-world-action
      uses: ./.github/actions/actionHelloWorld
    
