--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -10,11 +10,9 @@ jobs:
    - uses: actions/checkout@v3
    
    - name: Check current directory and contents
-     run: |
-          pwd 
-          ls -la
-   
-   - id: hello-world-action
+     run: pwd
+     
+   - name: hello-world-action
      uses: ./.github/actions/actionHelloWorld
    
    - name: install-python
