--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -10,7 +10,9 @@ jobs:
    - uses: actions/checkout@v3
    
    - name: Check current directory and contents
-     run: pwd
+     run: |
+          pwd
+          ls -la
      
    - name: hello-world-action
      uses: ./.github/actions/actionHelloWorld
