--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -6,6 +6,9 @@ jobs:
  build-python:
   runs-on: ubuntu-latest
   
+  env:
+      CPATH: .github/actions/actionHelloWorld
+      
   steps:  
    - uses: actions/checkout@v3
    
@@ -15,7 +18,7 @@ jobs:
           ls -la
      
    - name: hello-world-action
-     uses: ./.github/actions/actionHelloWorld
+     uses: ./$CPATH
    
    - name: install-python
      uses: actions/setup-python@v4
