--- a/.github/workflows/customAction.yml
+++ b/.github/workflows/customAction.yml
@@ -18,7 +18,7 @@ jobs:
           ls -la
      
    - name: hello-world-action
-     uses: ./$CPATH
+     uses: ${{ env.CPATH }}@v1
    
    - name: install-python
      uses: actions/setup-python@v4
